kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: booking-service
  namespace: onlineeventbookingali

spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 22i1307/booking-service:latest  
          ports:
            - containerPort: 5003  
        
---

apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbookingali
spec:
  selector:
    app: booking-service
  ports:
    - port: 5003
      targetPort: 5003 
      nodePort: 30003  
  type: NodePort  # Change to LoadBalancer if you need external access
