kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: event-service
  namespace: onlineeventbookingali

spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: 22i1307/event-service:latest  
          ports:
            - containerPort: 5002  
        
---

apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbookingali
spec:
  selector:
    app: event-service
  ports:
    - port: 5002
      targetPort: 5002 
      nodePort: 30002  
  type: NodePort  # Change to LoadBalancer if you need external access
