kubernetes/deployment-service-frontend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-service
  namespace: onlineeventbookingali

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: 22i1307/frontend-service:latest  
          ports:
            - containerPort: 5173  
        
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: onlineeventbookingali
spec:
  selector:
    app: frontend-service
  ports:
    - port: 5173
      targetPort: 5173 
      nodePort: 30173  
  type: NodePort  # Change to LoadBalancer if you need external access
