kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notification-service
  namespace: onlineeventbookingali

spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 22i1307/notification-service:latest  
          ports:
            - containerPort: 5004 
---

apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbookingali
spec:
  selector:
    app: notification-service
  ports:
    - port: 5004
      targetPort: 5004 
      nodePort: 30004  
  type: NodePort  # Change to LoadBalancer if you need external access
