kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: onlineeventbookingali

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 22i1307/user-service:latest  
          ports:
            - containerPort: 5001  
        
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbookingali
spec:
  selector:
    app: user-service
  ports:
    - port: 5001
      targetPort: 5001 
      nodePort: 30001  
  type: NodePort  # Change to LoadBalancer if you need external access
